gitops/infra/homelab/audiobookshelf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
